hphp/hack/test/typecheck/shape/nullable_shape_disallows_indexing.php.exp
File "nullable_shape_disallows_indexing.php", line 4, characters 10-42:
You are trying to access an element of this container but the container could be `null`.  (Typing[4063])
  File "nullable_shape_disallows_indexing.php", line 4, characters 33-36:
  This is what makes me believe it can be `null`.
