hphp/hack/test/typecheck/shape/nullable_shape_disallows_indexing.php
<?hh //strict

function foo(bool $b): void {
  $bar = ($b ? darray['a' => 5] : null)['a'];
}
